--- a/css/custom_classes.css
+++ b/css/custom_classes.css
@@ -13,7 +13,6 @@
 .background{
 
 }
-
 .background-img {
 	background: url(../img/sample.jpg) no-repeat center center;
 	 -webkit-background-size: cover;
@@ -21,7 +20,6 @@
   -o-background-size: cover;
   background-size: cover;
 }
-
 /* box */
 .border {
 	border: 1px solid #ccc;
@@ -37,10 +35,14 @@
 	-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
-
 /* text */
 .white-space-nowrap {
 	white-space: nowrap;
+}
+.prevent-text-bluring {
+	-ms-transform: perspective(1px) scale(1);
+    -webkit-transform: perspective(1px) scale(1);
+	transform: perspective(1px) scale(1);
 }
 
 /* animations */
@@ -51,4 +53,8 @@
 	-ms-transition: all 0.3s ease;
     transition:all 0.3s ease;
 }
-
+.transform {
+	-ms-transform: rotate(7deg); /* IE 9 */
+    -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
+  transform: rotate(7deg);
+}
