--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,26 +1,5 @@
 /**/
-/* custom classes */
-/**/
-.flex-center-elements {
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:-ms-flexbox;
-  display:flex;
-
-  -webkit-box-pack:center;
-  -webkit-justify-content:center;
-      -ms-flex-pack:center;
-          justify-content:center;
-
-  -webkit-box-align:center;
-  -webkit-align-items:center;
-      -ms-flex-align:center;
-              -ms-grid-row-align:center;
-          align-items:center;
-}
-
-/**/
-/* basic classes */
+/* flexbox classes */
 /**/
 .flex {
   display:-webkit-box;
