--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,15 @@ body * {
 }
 .navbar-default .navbar-toggle .icon-bar {background-color: lightgreen;}
 .navbar-default .navbar-collapse, .navbar-default .navbar-form { border-color:transparent; }
+	@media (max-width:767px) {
+		.navbar-collapse {
+			background-color: rgba(0, 255, 71, 0.1); 
+
+			webkit-box-shadow: none;
+			moz-box-shadow: none;
+		  box-shadow: none;
+		}
+	}
 
 .nav-solid {
 	background-color: #fff;
@@ -99,13 +108,6 @@ dropdown-menu>li>a:focus,
   background-color:lightgreen;
 }
 	@media (max-width:767px) {
-		.navbar-collapse {
-			background-color: rgba(0, 255, 71, 0.1); 
-
-			webkit-box-shadow: none;
-			moz-box-shadow: none;
-		  box-shadow: none;
-		}
 		.navbar-default .navbar-nav .open .dropdown-menu>li>a {
 			color:lightgreen;
 		}
@@ -121,36 +123,73 @@ header {
   -o-background-size: cover;
   background-size: cover;
 }
-header h1 { color:#eee; }
+header h1 { color:#eee; font-size: 290%; font-weight: 700; }
 header hr {	max-width:50px; margin:30px auto; border: 2px solid lightgreen; }
 header p { color:#ddd; font-size:170%; }
 
 #down-btn span {
 	position:absolute;
 	top:90%;
+
 	left: -moz-calc(50% - 20px); /* Firefox */
 	left: -webkit-calc(50% - 20px); /* WebKit */
 	left: -o-calc(50% - 20px); /* Opera */
 	left: calc(50% - 20px); /* Standard */
-	padding:10px;
-	color:lightgreen;
-	border:2px solid lightgreen;
+
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	border-radius: 50%;
+
+	padding:10px 9px 9px 10px;
+	color:lightgreen;
+	border:2px solid lightgreen;
 }
 /* header */
 
 /* section */
-section { height:100%; }
-section h1 { color:blue; }
-section hr { border: 2px solid blue;  }
-section p { color:blue; }
+section { min-height:100%; }
+section h1, section h2 { color:#fff; }
+section hr { border: 2px solid #fff;  }
+section p { color:#fff; }
+#services { background-color:gold; }
+#services .sub-content { }
+#services .service {
+	min-width:200px;
+	min-height:180px;
+	margin:10px;
+	background-color: #fff;
+
+	-webkit-border-radius: 10%;
+		-moz-border-radius: 10%;
+		border-radius: 10%;
+}
+#services .service:hover {
+			-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
+	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
+}
+#services .service:hover i { font-size:3em; }
+#services .service:hover p { font-size:150%; }
+#services .service p { margin:0; color:#444; }
+#services .icon { margin-bottom:20px; }
+#about { background-color:orange; }
+#social { background-color:green; }
+#contact { background-color: lightgreen; }
+#services, #about, #contact { padding-top:50px; }
+
+
 /* section */
 
 /* content */
 .content { position:relative; height:100%; margin:0 3%; text-align:center; }
 .content h1 { font-size: 290%; font-weight: 700; }
+.content h2 { font-size: 250%; font-weight: 700; }
 .content hr { max-width:50px; margin:30px auto;}
 .content p { font-size:170%; }
 /* content */
+
+footer { color:#fff; background-color: #333; padding:20px 0; }
+footer .content p {
+	font-size:90%;
+	margin:0;
+}
