--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,8 @@ dropdown-menu>li>a:focus,
 header {
 	height:100%;
 	background: url(../img/header.jpg) no-repeat center center;
-	 -webkit-background-size: cover;
+
+	-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
@@ -147,46 +148,57 @@ header p { color:#ddd; font-size:170%; }
 /* header */
 
 /* section */
-section { min-height:100%; }
-section h1, section h2 { color:#fff; }
-section hr { border: 2px solid #fff;  }
-section p { color:#fff; }
-#services { background-color:gold; }
-#services .sub-content { }
+section { min-height:100%; background-color:; border-top:3px solid #555;}
+section h1, section h2 { color:#333; }
+section hr { border: 2px solid #333; }
+section p { color:#333; }
+#services { }
 #services .service {
 	min-width:200px;
 	min-height:180px;
 	margin:10px;
-	background-color: #fff;
 
-	-webkit-border-radius: 10%;
-		-moz-border-radius: 10%;
-		border-radius: 10%;
 }
-#services .service:hover {
+
+#services .service p { margin:0; color:#444; }
+#services .icon { margin-bottom:20px; color:lightgreen;}
+#about {  }
+#about .content .text-box p {text-align: left; font-size:140%;}
+	@media (max-width:767px) {
+		#about .content .text-box p {font-size:120%;}
+	}
+#social { }
+#contact {  min-height:auto; }
+#contact h2, #contact p { color:#333; }
+#contact a {
+	padding:10px;
+	margin-bottom:10px;
+	background-color: #333;
+
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+
+}
+#contact a:hover {
 			-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
-	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
+	box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.5);
 }
-#services .service:hover i { font-size:3em; }
-#services .service:hover p { font-size:150%; }
-#services .service p { margin:0; color:#444; }
-#services .icon { margin-bottom:20px; }
-#about { background-color:orange; }
-#social { background-color:green; }
-#contact { background-color: lightgreen; }
-#services, #about, #contact { padding-top:50px; }
+#contact a i { margin:5px; color:#ddd; }
+#services, #about, #contact {  }
 
 
 /* section */
 
 /* content */
-.content { position:relative; height:100%; margin:0 3%; text-align:center; }
+.content { position:relative; height:100%; margin:0 3%; text-align:center; padding:50px 0; }
 .content h1 { font-size: 290%; font-weight: 700; }
 .content h2 { font-size: 250%; font-weight: 700; }
 .content hr { max-width:50px; margin:30px auto;}
 .content p { font-size:170%; }
 /* content */
+
 
 footer { color:#fff; background-color: #333; padding:20px 0; }
 footer .content p {
