--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body * {
   color: green;
   background-color: transparent;
 }
+
 .navbar-default .navbar-header span,
 .navbar-default .navbar-header i { color:lightgreen; }
 .navbar-default .navbar-nav>li>a {
@@ -61,10 +62,10 @@ body * {
   background-color: green;
 }
 .navbar-default .navbar-toggle .icon-bar {background-color: lightgreen;}
-.navbar-default .navbar-collapse, .navbar-default .navbar-form { border-color:transparent; }
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form { border-color:transparent; }
 	@media (max-width:767px) {
 		.navbar-collapse {
-			background-color: rgba(0, 255, 71, 0.1); 
 
 			webkit-box-shadow: none;
 			moz-box-shadow: none;
@@ -73,7 +74,7 @@ body * {
 	}
 
 .nav-solid {
-	background-color: #fff;
+	background-color: #555;
 	border-color: lightgreen;
 	min-height: 50px;
 }
@@ -171,23 +172,17 @@ section p { color:#333; }
 #contact {  min-height:auto; }
 #contact h2, #contact p { color:#333; }
 #contact a {
+	width:74px;
 	padding:10px;
 	margin-bottom:10px;
-	background-color: #333;
-
+	background-color: lightgreen;
+	border:1px solid transparent;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	border-radius: 50%;
 
 }
-#contact a:hover {
-			-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
-	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
-	box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.5);
-}
-#contact a i { margin:5px; color:#ddd; }
-#services, #about, #contact {  }
-
+#contact a i { margin:5px; color:#fff; }
 
 /* section */
 
@@ -199,9 +194,13 @@ section p { color:#333; }
 .content p { font-size:170%; }
 /* content */
 
-
+/* footer */
 footer { color:#fff; background-color: #333; padding:20px 0; }
+footer .content {padding:0;}
 footer .content p {
 	font-size:90%;
 	margin:0;
+	padding-top:10px;
 }
+footer .content a {color:#fff; padding:10px;}
+/* footer */
